--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "script.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js --watch"
+    "build": "webpack --config webpack.config.js"
   },
   "author": "",
   "license": "ISC",
